src/test/deca/context/invalid/provided/affect-incompatible.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2017

{
   int a;
   boolean b;

   // Doit etre refuse.
   a = b;
}
